add my progress score
